@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.3 2004/12/11 23:32:44 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.4 2004/12/12 05:49:07 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   11 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Initial ChangeLog commit. Added set_size_request() call in gtkfe.py so the
   width of the left frame doesn't shift. Incorporated screen updates from
-  John Laliberte <allanonl@bu.edu> (AllanonJL in #gentoo-installer)
+  John Laliberte <allanonl@bu.edu> (AllanonJL in #gentoo-installer). Added
+  functionality to NetworkMounts.py to list NFS exports on a particular host.
 
